[package]
name = "shared_memory"
description = "A user friendly crate that allows you to share memory between processes"
version = "0.12.5"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/shared_memory"
repository = "https://github.com/elast0ny/shared_memory-rs"
keywords = ["shmem", "shared", "memory", "inter-process", "process"]
categories = [
    "os::unix-apis",
    "os::windows-apis",
    "memory-management",
    "concurrency",
    "asynchronous",
]
exclude = ["ci/*", ".github/*"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tracing = { version = "0.1.41", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["fs", "mman"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
win-sys = "0.3"
rand = "0.8"
winapi = { version = "0.3", features = ["winnt", "winbase", "winerror", "ntdef", "synchapi", "handleapi"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
